php_expose.yaml
apiVersion: v1
kind: Service
metadata:
  name: dm-hw20-php-deploy
spec:
  selector:
    app: dm-hw20-php
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001  # You can choose any port number between 30000 and 32767
