php_loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: dm-hw20-php-
spec:
  selector:
    app: php
    tier: backend
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    # targetPort: 32265
    protocol: TCP
