php_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dm-hw20-php-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dm-hw20-php-service
            port:
              name: http
